--- a/about.html
+++ b/about.html
@@ -37,9 +37,9 @@
 		<div class="wrapper flex-container">
 			<div class = "writing">
 				<h2>About the Photographer</h2>
-				<p class = "about">Matthew is currently in medical school training to become a trauma surgeon. Through his avid passion for travel, he is able to treat illnesses abroad and capture the most beautiful and powerful moments while in other countries. Please enjoy this collection of Matthew's adventures!</p>
+				<p class = "about">Matthew is currently in his third year of medical school, training to become a trauma surgeon. Through his avid passion for travel, Matt is able to become involved in global medicine while also taking time to capture beautiful moments through his camera lens.</p>
 				<br>
-				<p>Phasellus consectetur eros vel ipsum tristique accumsan. Mauris nec ultricies elit. Curabitur nec vestibulum dui. Donec a massa a ligula accumsan posuere nec sed augue. Integer molestie fermentum libero eu pretium. Phasellus vel interdum ipsum, eget eleifend enim. In pretium ex vitae dignissim accumsan. Nullam vitae tellus nec neque cursus posuere eget a orci. Pellentesque sed tincidunt ante. Nullam vitae lectus quis tortor varius commodo. Maecenas placerat tempus feugiat.</p>
+				<p>(Temporary Bio) Phasellus consectetur eros vel ipsum tristique accumsan. Mauris nec ultricies elit. Curabitur nec vestibulum dui. Donec a massa a ligula accumsan posuere nec sed augue. Integer molestie fermentum libero eu pretium. Phasellus vel interdum ipsum, eget eleifend enim. In pretium ex vitae dignissim accumsan. Nullam vitae tellus nec neque cursus posuere eget a orci. Pellentesque sed tincidunt ante. Nullam vitae lectus quis tortor varius commodo. Maecenas placerat tempus feugiat.</p>
 			</div>
 			<div class="profile">
 				<img src="img/mattprofile.jpg" class="mattprofile" alt="photo">
